fixed structure, added command executor
