# api/pkg/httpserver/handlers/bundleIds.go
@@ -1,9 +1,8 @@
 package handlers
 
 import (
-	"d-kv/signer/api/pkg/httpserver/entities"
+	_ "d-kv/signer/db-common/entity"
 	"github.com/gin-gonic/gin"
-	"net/http"
 )
 
 // @Summary Add new BundleId
@@ -12,6 +11,8 @@ import (
 // @ID add-bundleId
 // @Accept json
 // @Produce json
+// @Param tenantId path string true "tenantId"
+// @Param integrationId path string true "integrationId"
 // @Param input body entities.BundleId true "bundleId params"
 // @Success 200 {object} entities.BundleId
 // @Failure 400,404 {object} errorResponse
@@ -19,20 +20,15 @@ import (
 // @Failure default {object} errorResponse
 // @Router /bundleIds [post]
 func (h *Handler) postBundleId(c *gin.Context) {
-	var inp entities.BundleId
-
-	err := c.BindJSON(&inp)
-	if err != nil {
-		newErrorResponse(c, http.StatusBadRequest, err.Error())
-		return
-	}
-	c.JSON(http.StatusOK, inp)
+	h.services.CommandExecutorService.PostBundleId(c)
 }
 
 // @Summary Get bundleIds list
 // @Description Get all bundleIds
 // @Tags bundleId
 // @ID get-bundleIds-list
+// @Param tenantId path string true "tenantId"
+// @Param integrationId path string true "integrationId"
 // @Produce  json
 // @Success 200 {array} []entities.BundleId
 // @Router /bundleIds [get]
@@ -44,6 +40,8 @@ func (h *Handler) getBundleIds(c *gin.Context) {
 // @Description Get bundleId instance by id
 // @Tags bundleId
 // @ID get-bundleId
+// @Param tenantId path string true "tenantId"
+// @Param integrationId path string true "integrationId"
 // @Param id path string true "bundleId identifier"
 // @Produce  json
 // @Success 200 {object} entities.BundleId
@@ -56,11 +54,13 @@ func (h *Handler) getBundleIdByID(c *gin.Context) {
 // @Description BundleId deletion by id
 // @Tags bundleId
 // @ID delete-bundleId
+// @Param tenantId path string true "tenantId"
+// @Param integrationId path string true "integrationId"
 // @Param id path string true "bundleId identifier"
 // @Produce  json
 // @Success 204 {string} string "Deletion success"
 // @Failure 404 {string} string "BundleId not found"
 // @Router /bundleId/{id} [delete]
 func (h *Handler) deleteBundleIdByID(c *gin.Context) {
-	c.Status(http.StatusNoContent)
+	h.services.CommandExecutorService.DelBundleIdById(c)
 }
