# api/pkg/httpserver/handlers/devices.go
@@ -1,9 +1,7 @@
 package handlers
 
 import (
-	"d-kv/signer/api/pkg/httpserver/entities"
 	"github.com/gin-gonic/gin"
-	"net/http"
 )
 
 // @Summary Add new device
@@ -12,6 +10,8 @@ import (
 // @ID add-device
 // @Accept json
 // @Produce json
+// @Param tenantId path string true "tenantId"
+// @Param integrationId path string true "integrationId"
 // @Param input body entities.Device true "device params"
 // @Success 200 {object} entities.Device
 // @Failure 400,404 {object} errorResponse
@@ -19,20 +19,15 @@ import (
 // @Failure default {object} errorResponse
 // @Router /devices [post]
 func (h *Handler) postDevice(c *gin.Context) {
-	var inp entities.Device
-
-	err := c.BindJSON(&inp)
-	if err != nil {
-		newErrorResponse(c, http.StatusBadRequest, err.Error())
-		return
-	}
-	c.JSON(http.StatusOK, inp)
+	h.services.CommandExecutorService.PostDevice(c)
 }
 
 // @Summary Get devices list
 // @Description Get all devices
 // @Tags device
 // @ID get-devices-list
+// @Param tenantId path string true "tenantId"
+// @Param integrationId path string true "integrationId"
 // @Produce  json
 // @Success 200 {array} []entities.Device
 // @Router /devices [get]
@@ -44,6 +39,8 @@ func (h *Handler) getDevices(c *gin.Context) {
 // @Description Get device instance by id
 // @Tags device
 // @ID get-device
+// @Param tenantId path string true "tenantId"
+// @Param integrationId path string true "integrationId"
 // @Param id path string true "device identifier"
 // @Produce  json
 // @Success 200 {object} entities.Device
